fixed table overflow

--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -360,6 +360,10 @@ aside ol li ul li a {
   border-bottom: none;
 }
 
+.boxes #otimizacaoCriptografia {
+    overflow-wrap: anywhere;
+}
+
 footer {
   width: 100%;
   padding: 25px 0;
